<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="title">Title : </string>
    <string name="overview">Overview : </string>
    <string name="release_date">Release Date : </string>
    <string name="userRating">User Rating : </string>
    <string name="movie_trailers">Movie Trailers : </string>
    <string name="popular">popular</string>
    <string name="top_rated">top_rated</string>
    <string name="upcoming">upcoming</string>
</resources>
