<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.iitism.ritik.popularmovies.Movie_Details">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="#21e587"
        app:contentPadding="10dp"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/image_layout">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/movie_image"/>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="#21e587"
        app:contentPadding="10dp"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:id="@+id/title_layout"
        android:layout_below="@id/image_layout">
    <LinearLayout
        style="@style/llmovie_details1">
        <TextView
            style="@style/tvmovie_details"
            android:text="@string/title"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/movie_title"
            style="@style/tvmovie_details"/>
    </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="#21e587"
        app:contentPadding="10dp"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_below="@id/title_layout"
        android:id="@+id/overview_layout">
    <LinearLayout
        style="@style/llmovie_details1">
        <TextView
            style="@style/tvmovie_details"
            android:text="@string/overview"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/overview"
            style="@style/tvmovie_details"/>
    </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="#21e587"
        app:contentPadding="10dp"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_below="@id/overview_layout"
        android:id="@+id/releaseDate_layout">
    <LinearLayout
        style="@style/llmovie_details1">
        <TextView
            style="@style/tvmovie_details"
            android:text="@string/release_date"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/releaseDate"
            style="@style/tvmovie_details"/>
    </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="#21e587"
        app:contentPadding="10dp"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_below="@id/releaseDate_layout"
        android:id="@+id/user_rating_layout">
    <LinearLayout
        style="@style/llmovie_details1">
        <TextView
            style="@style/tvmovie_details"
            android:text="@string/userRating"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/userRating"
            style="@style/tvmovie_details"/>
    </LinearLayout>
    </android.support.v7.widget.CardView>


    <TextView
        style="@style/tvmovie_details"
        android:text="@string/movie_trailers"
        android:textStyle="bold"
        android:id="@+id/trailer_title"
        android:layout_below="@+id/user_rating_layout"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:visibility="gone"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="5dp"
        app:cardCornerRadius="5dp"
        app:cardBackgroundColor="#21e587"
        app:contentPadding="10dp"
        android:visibility="gone"
        android:layout_below="@+id/trailer_title"
        android:id="@+id/card_trailer_list"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
    <ListView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:id="@+id/trailers_list"></ListView>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/seeReview"
        android:layout_below="@+id/card_trailer_list"
        android:text="Click to See Reviews>>>"
        android:visibility="gone"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_blue_light"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="OnClickSeeReview"/>

</RelativeLayout>
</ScrollView>
